[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["tests", "dev", ".trunk", ".github", ".venv", "dist"]

[project]
name = "lightdash-ai-tools"
version = "0.0.5"
authors = [{ name = "yu-iskw" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
description = "AI tools for Lightdash"
dependencies = ["pydantic>=2.9", "requests>=2.32"]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]

dev = [
  "build>=1.2.2.post1",
  "langchain-openai>=0.2.14",
  "langgraph>=0.2.61",
  "pytest>=8.0,<9.0",
]
